<resources>
    <string name="app_name">Janur</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_seru">"Welcome !"</string>
    <string name="welcome">"Welcome "</string>
    <string name="welcome_back">"WELCOME BACK"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="username">"Username"</string>
    <string name="email">"Email"</string>
    <string name="password">"Password"</string>
    <string name="register">"Register"</string>
    <string name="email_username">"Email / Username"</string>
    <string name="icon_category_desc">"Icon Category Product Desc"</string>
    <string name="category_name">"Category Name"</string>
    <string name="kategori">"Kategori"</string>
    <string name="vendor">"List Vendor"</string>
    <string name="nama_vendor">"Nama Vendor"</string>
    <string name="kota_vendor">"Kota Vendor"</string>
    <string name="image_view_like">Image View Like</string>
    <string name="value_rating">5/5</string>
    <string name="jumlah_ulasan">(100 Ulasan)</string>
    <string name="detail_service">Detail Layanan</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="daftar_harga">Lihat Daftar Harga</string>
    <string name="chat">Chat Vendor</string>
    <string name="booking">Booking</string>
    <string name="pesanan">Pesanan</string>
    <string name="akun">Akun</string>
    <string name="home">Home</string>
    <string name="temukan_pernikahan_impian">Temukan Pernikahan Impianmu!</string>
    <string name="cari_pesanan">Cari Pesanan...</string>
    <string name="tren_inspirasi_wedding">Tren Inspirasi Wedding</string>
    <string name="vendor_populer">Vendor Populer</string>
    <string name="lihat_detail">Lihat Detail</string>
    <string name="tren_image">Tren Image</string>
    <string name="tren_tittle">Judul Tren</string>
    <string name="promo">Promo</string>
    <string name="nama_layanan">Nama Layanan</string>
    <string name="jumlah_booking">Jumlah Booking</string>
    <string name="dalam_proses">Dalam Proses</string>
    <string name="selesai">Selesai</string>
    <string name="batal">Batal</string>
    <string name="lokasi_vendor">Lokasi Vendor</string>
    <string name="status">Status Pesanan</string>
    <string name="nama_user">Nama User</string>
    <string name="space">|</string>
    <string name="pengikut">Jumlah Pengikut</string>
    <string name="mengikuti">Jumlah Mengikuti</string>
    <string name="favorit">Favorit</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="tentang_app">Tentang Aplikasi</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_account">Don’t have an account? </string>
    <string name="sign_up_here"> <![CDATA[Sign up here.]]></string>
    <string name="sign_in_here"> <![CDATA[Sign in here.]]></string>
    <string name="janur">JANUR</string>
    <string name="welcome_janur">Warmest greetings from Janur! Were excited that youve trusted your special day with us </string>
    <string name="get_started">GET STARTED</string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>