<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivVendorPopuler"
        android:layout_width="150dp"
        android:layout_height="135dp"
        android:src="@drawable/dummy_image"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/corner_shaped"
        android:contentDescription="@string/tren_image"/>

    <TextView
        android:id="@+id/tvNamaVendorPopuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_vendor"
        android:textSize="14sp"
        android:layout_gravity="start"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvNamaLayananPopuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nama_layanan"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/tvJumlahBookingPopuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_booking"
        android:textSize="14sp"
        android:gravity="start"
        android:layout_marginStart="12dp"/>

</LinearLayout>