<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivPromoVendor"
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:src="@drawable/dummy_image"
        android:background="#F8F8F8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ivPromoVendor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_vendor"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/image_view_like"
            android:src="@drawable/unlike" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/topLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:numStars="1"
            android:rating="3.5"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/tvRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_rating"
            android:textSize="16sp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tvJumlahUlasan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/jumlah_ulasan"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/llRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_service"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/llRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvLoremIpsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDaftarHarga"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:padding="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvLoremIpsum"
            android:drawableStart="@drawable/harga"
            android:background="@drawable/yellow_button_corner_yellow"
            android:text="@string/daftar_harga"
            android:drawablePadding="3dp"
            android:textColor="#B3902C" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChat"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/yellow_button_corner_yellow"
            android:text="@string/chat"
            android:textColor="#B3902C" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBooking"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@drawable/yellow_button_background"
            android:text="@string/booking"
            android:textColor="#473913" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
