<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:id="@+id/ivIconLayanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_android_24"
                android:layout_marginStart="10dp"
                android:padding="4dp"
                android:background="@drawable/circle_background"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvNamaLayanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_layanan"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:id="@+id/tvStatusPesanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="12sp"
                    android:text="@string/status"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000"
                    android:background="@drawable/rounded_background_status" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivDalamProses"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/dummy_image"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/tren_image" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvNamaVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nama_vendor"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvLokasiVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/lokasi_vendor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLihatDetail"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="end|bottom"
                    android:background="#FFC107"
                    android:text="@string/lihat_detail"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
