<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmant_home"
    tools:context=".views.HomepageFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@drawable/toolbar"
        android:titleTextColor="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:id="@+id/toolbar_title"
                    android:layout_gravity="start"
                    android:text="@string/janur"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="#7D2D2D"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_yellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="70dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/icon_notifcations"/>

            </LinearLayout>



        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/search_custom"
            android:textColor="#888888"
            android:hint="@string/temukan_pernikahan_impian"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="14sp"
            android:drawableEnd="@drawable/search_icon"
            android:drawablePadding="10dp"/>

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategoryHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="6dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promo"
                android:textSize="14sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/ivPromoHome"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:src="@drawable/dummy_image"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/corner_shaped" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tren_inspirasi_wedding"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLihatDetailTrenInspirasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/lihat_detail"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#2196F3"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrenWedding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/vendor_populer"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLihatDetailVendorPopuler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/lihat_detail"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="#2196F3"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvVendorPopuler"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="60dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>